nodejs-app.yml
apiVersion: v1
kind: Pod
metadata:
  name: nodejs-app
spec:
  containers:
  - name: nodejs-app
    image: uphiller/nodejs-hello-world
    ports:
    - containerPort: 3000
