service.yml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app
spec:
  selector:
    app: nodejs-app
  ports:
  - protocol: TCP
    port: 30653
    targetPort: 3000
  type: NodePort
